--- a/composer.json
+++ b/composer.json
@@ -33,17 +33,17 @@
     "platform": {
     },
     "require": {
-        "php": ">=7.1 <7.5",
+        "php": ">=8.0",
         "ext-pdo": "*",
         "ext-gd": "*",
         "ext-mbstring": "*",
         "composer/installers": "~1.0",
-        "fuel/core": "1.8.2",
-        "fuel/auth": "1.8.2",
-        "fuel/email": "1.8.2",
-        "fuel/oil": "1.8.2",
-        "fuel/orm": "1.8.2",
-        "fuel/parser": "1.8.2",
+        "fuel/core": "dev-1.9/develop",
+        "fuel/auth": "dev-1.9/develop",
+        "fuel/email": "dev-1.9/develop",
+        "fuel/oil": "dev-1.9/develop",
+        "fuel/orm": "dev-1.9/develop",
+        "fuel/parser": "dev-1.9/develop",
         "iturgeon/qasset": "1.0.5",
         "fuelphp/upload": "2.0.6",
         "monolog/monolog": "1.18.*",
