upgrades to php 8.1.x
Upgrading to php 8.1.x requires some updates to fuelphp.
fix code sniffer issue
php 8.1 compatability updates
updates fuel-phpcs to 3.0.1
update phpunit speedtrap
fix oil error loading autoload file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       - BOOL_LTI_LOG_FOR_DEBUGGING=true
       - CACHE_DRIVER=memcached
       - CIPHER_KEY=${DEV_ONLY_SECRET_CIPHER_KEY}
+      - CRYPTO_HMAC=${DEV_ONLY_SECRET_CIPHER_KEY}
+      - CRYPTO_IV=${DEV_ONLY_SECRET_CIPHER_KEY}
+      - CRYPTO_KEY=${DEV_ONLY_SECRET_CIPHER_KEY}
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql/${MYSQL_DATABASE}
       - FUEL_ENV=development
       - FUEL_LOG_THRESHOLD=100
