Committing minor changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ucfopen/materia-server-client-assets",
+  "name": "@ucfopen/materia",
   "version": "10.0.0",
   "license": "AGPL-3.0",
   "description": "Engage students with easily embedded apps for online courses.",
