Cleanup. Added engine/creator/scorecore route fix to nginx-dev.

--- a/docker/config/nginx/nginx-dev.conf
+++ b/docker/config/nginx/nginx-dev.conf
@@ -152,6 +152,12 @@ http {
         listen *:8008 ssl;
         listen [::]:8008 ssl;
 
+        # some js assets will be requested at /js instead of /dist/js 
+        # redirect these requests appropriately
+        location ~* ^\/js\/.+\.js$ {
+            proxy_pass https://$server_addr/dist$uri;
+        }
+
         # @TODO: match only /js/* /css/* and /widget/*
         location ~* ^.+\.(html|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf|js|css|json|obj)$ {
             # pass all requests back to origin server transparently
