--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@vx/shape": "^0.0.198",
     "angular": "1.8.0",
     "fs-extra": "^8.0.1",
-    "materia-server-client-assets": "2.4.0",
     "napa": "^3.0.0",
     "ngmodal": "ucfcdl/ngModal#v1.2.2",
     "react-datepicker": "^3.6.0",
@@ -46,6 +45,7 @@
     "angular-animate": "1.8.0",
     "angular-mocks": "1.8.0",
     "autoprefixer": "^9.8.5",
+    "axios": "^1.1.3",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-angularjs-annotate": "^0.10.0",
@@ -66,6 +66,7 @@
     "jquery-ui": "1.12.1",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
+    "msw": "^0.47.4",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
