--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/dom": "7.31.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "11.2.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.1.9",
     "angular-animate": "1.8.0",
     "angular-mocks": "1.8.0",
@@ -66,7 +67,7 @@
     "jquery-ui": "1.12.1",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
-    "msw": "^0.47.4",
+    "msw": "^0.30.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
@@ -143,5 +144,8 @@
         "lines": 43
       }
     }
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
