--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "fs-extra": "^8.0.1",
-    "materia-server-client-assets": "2.4.1-alpha1",
+    "materia-server-client-assets":"2.4.2",
     "napa": "^3.0.0"
   },
   "devDependencies": {
