Tweaked workflow_dispatch in GH action

--- a/.github/workflows/publish_widget_dependencies.yml
+++ b/.github/workflows/publish_widget_dependencies.yml
@@ -1,5 +1,6 @@
 name: Upload Widget Dependencies Package
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 jobs:
   checkout-and-install:
     runs-on: ubuntu-latest
