--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "eher/oauth": "1.0.7",
         "aws/aws-sdk-php": "3.67.17",
         "symfony/dotenv": "^5.1",
-        "ucfopen/materia-theme-ucf": "1.2.1"
+        "ucfopen/materia-theme-ucf": "2.0.0-alpha1"
     },
     "suggest": {
         "ext-memcached": "*"
@@ -94,9 +94,9 @@
             "package": {
                 "name": "ucfopen/materia-theme-ucf",
                 "type": "fuel-package",
-                "version": "1.2.1",
+                "version": "2.0.0-alpha1",
                 "dist": {
-                    "url": "https://github.com/ucfopen/Materia-Theme-UCF/archive/refs/tags/v1.2.1.zip",
+                    "url": "https://github.com/ucfopen/Materia-Theme-UCF/archive/refs/tags/v2.0.0-alpha1.zip",
                     "type": "zip"
                 },
                 "source": {
