Reworked and cleaned up elements of webpack file emission. File cleanup.

--- a/docker/config/nginx/nginx-dev.conf
+++ b/docker/config/nginx/nginx-dev.conf
@@ -152,9 +152,10 @@ http {
         listen *:8008 ssl;
         listen [::]:8008 ssl;
 
-        # some js assets will be requested at /js instead of /dist/js 
-        # redirect these requests appropriately
-        location ~* ^\/js\/.+\.js$ {
+        # In the dev environment, js and css assets are emitted to public/dist instead of public/
+        # However, server pages will expect them to be in public/js or public/css instead
+        # Redirect requests for these assets to public/dist
+        location ~* ^\/(?:js|css)\/.+\.(?:js|css)$ {
             proxy_pass https://$server_addr/dist$uri;
         }
 
