--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-manifest-plugin": "^5.0.0",
+    "webpack-remove-empty-scripts": "1.0.1",
     "webpack-strip-block": "^0.3.0"
   },
   "nodemonConfig": {
