--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "jquery-ui": "1.12.1",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^2.7.2",
-    "node-sass": "^8.0.0",
     "nodemon": "^2.0.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^17.0.2",
+    "sass": "^1.69.5",
     "sass-loader": "^13.2.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^5.0.1",
