--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "destroy-everything": "php oil r admin:destroy_everything --quiet",
         "oil-install-quiet": "php oil r install --skip_prompts=true",
         "widgets-install-test": "php oil r widget:install fuel/app/tests/widget_packages/*.wigt",
-        "test": "php fuel/vendor/bin/phpunit -c fuel/app/phpunit.xml",
+        "test": "php fuel/vendor/bin/phpunit --verbose -c fuel/app/phpunit.xml",
         "test-with-xdebug": "php -dzend_extension=xdebug.so fuel/vendor/bin/phpunit -c fuel/app/phpunit.xml",
         "coverage": "php oil test --coverage-html=coverage --coverage-clover=coverage.xml --coverage-text=coverage.txt",
         "heroku-extract-widgets": "php oil r widget:extract_from_config",
