--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ public/js/materia.storage.table.js
 public/js/student.js
 public/js/vendor/*
 
+public/openai_usage.txt
 
 # Installed Widgets
 public/widget
