--- a/fuel/app/tests/widget_source/test_widget/src/install.yaml
+++ b/fuel/app/tests/widget_source/test_widget/src/install.yaml
@@ -9,6 +9,7 @@ general:
   is_storage_enabled: No
   is_qset_encrypted: No
   is_answer_encrypted: No
+  is_generable: No
   api_version: 2
 files:
   player: player.html
