--- a/.env
+++ b/.env
@@ -88,3 +88,5 @@ LTI_KEY="materia-production-lti-key"
 #BOOL_LTI_USE_LAUNCH_ROLES=true
 #BOOL_LTI_GRACEFUL_CONFIG_FALLBACK=true
 #BOOL_LTI_LOG_FOR_DEBUGGING=false
+
+OPENAI_API_KEY=<MUST_SET>
