--- a/.env
+++ b/.env
@@ -34,12 +34,25 @@ BOOL_SEND_EMAILS=false
 #URLS_STATIC=
 #URLS_ENGINES=
 #BOOL_ADMIN_UPLOADER_ENABLE=true
-#ASSET_STORAGE_DRIVER=file
-#ASSET_STORAGE_S3_REGION=us-east-1
-#ASSET_STORAGE_S3_BUCKET=
-#ASSET_STORAGE_S3_BASEPATH=
-#ASSET_STORAGE_S3_KEY=
-#ASSET_STORAGE_S3_SECRET=
+
+# AWS S3 ===================
+
+ASSET_STORAGE_DRIVER=s3
+ASSET_STORAGE_S3_REGION=us-east-1
+ASSET_STORAGE_S3_BASEPATH=media
+
+# AWS S3 DEVELOPMENT ===================
+
+# ASSET_STORAGE_S3_BUCKET=fake_bucket
+# ASSET_STORAGE_S3_ENDPOINT=http://fakes3:10001
+# AWS_SESSION_TOKEN=<MUST_SET> // STS token for s3 development
+
+# AWS S3 PRODUCTION ===================
+
+# ASSET_STORAGE_S3_BUCKET=<MUST_SET>
+# ASSET_STORAGE_S3_ENDPOINT=<MUST_SET>
+# AWS_ACCESS_KEY_ID=<MUST_SET>
+# AWS_SECRET_ACCESS_KEY=<MUST_SET>
 
 # SESSION & CACHE ===================
 
