--- a/docker/docker-compose.override.test.yml
+++ b/docker/docker-compose.override.test.yml
@@ -24,6 +24,10 @@ services:
       - uploaded_media_test:/var/www/html/fuel/packages/materia/media
       - ./config/php/materia.test.php.ini:/usr/local/etc/php/conf.d/test.ini
       - ./dockerfiles/wait-for-it.sh:/wait-for-it.sh
+    depends_on:
+      - fakes3_test
+      - mysql
+      - memcached
 
   mysql:
     environment:
@@ -36,9 +40,18 @@ services:
     # tmpfs:
     #   - /var/lib/mysql
 
-  fakes3:
+  fakes3_test:
+    image: ucfopen/materia:fake-s3-dev
+    build:
+      context: ../
+      dockerfile: materia-fake-s3.Dockerfile
+    ports:
+      - "10002:10001"
     volumes:
       - uploaded_media_test:/s3mnt/fakes3_root/fakes3_uploads/media/
+    networks:
+      - frontend
+      - backend
 
 volumes:
   # static_files: {} # compiled js/css and uploaded widgets
