--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -19,6 +19,10 @@ services:
       - ..:/var/www/html/
       - uploaded_widgets:/var/www/html/public/widget/
       - ./dockerfiles/wait-for-it.sh:/wait-for-it.sh
+    depends_on:
+      - fakes3
+      - mysql
+      - memcached
 
   mysql:
     environment:
