Disable object locking on fakes3 and fix fakes3 volume mounts

--- a/.env
+++ b/.env
@@ -40,19 +40,12 @@ BOOL_SEND_EMAILS=false
 ASSET_STORAGE_DRIVER=s3
 ASSET_STORAGE_S3_REGION=us-east-1
 ASSET_STORAGE_S3_BASEPATH=media
-
-# AWS S3 DEVELOPMENT ===================
-
-# ASSET_STORAGE_S3_BUCKET=fake_bucket
-# ASSET_STORAGE_S3_ENDPOINT=http://fakes3:10001
-# AWS_SESSION_TOKEN=<MUST_SET> // STS token for s3 development
-
-# AWS S3 PRODUCTION ===================
-
 # ASSET_STORAGE_S3_BUCKET=<MUST_SET>
 # ASSET_STORAGE_S3_ENDPOINT=<MUST_SET>
 # AWS_ACCESS_KEY_ID=<MUST_SET>
 # AWS_SECRET_ACCESS_KEY=<MUST_SET>
+# AWS_SESSION_TOKEN=<MUST_SET> # STS token for s3 development
+# FAKES3_DISABLED=false # set to true if using real S3 on development
 
 # SESSION & CACHE ===================
 
