--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ BOOL_SEND_EMAILS=false
 
 # AWS S3 ===================
 
-ASSET_STORAGE_DRIVER=s3
+ASSET_STORAGE_DRIVER=file
 ASSET_STORAGE_S3_REGION=us-east-1
 ASSET_STORAGE_S3_BASEPATH=media
 # ASSET_STORAGE_S3_BUCKET=<MUST_SET>
