--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,11 +22,7 @@ services:
       dockerfile: materia-app.Dockerfile
     environment:
       # View Materia README for env settings
-      # - ASSET_STORAGE_DRIVER=${ASSET_STORAGE_DRIVER}
-      # - ASSET_STORAGE_S3_BUCKET=${ASSET_STORAGE_S3_BUCKET}
-      # - ASSET_STORAGE_S3_ENDPOINT=${ASSET_STORAGE_S3_ENDPOINT}
-      # - ASSET_STORAGE_S3_KEY=${AWS_ACCESS_KEY_ID}
-      # - ASSET_STORAGE_S3_SECRET=${AWS_SECRET_ACCESS_KEY}
+      - ASSET_STORAGE_DRIVER=${ASSET_STORAGE_DRIVER}
       - AUTH_DRIVERS=Materiaauth
       - AUTH_SALT=${DEV_ONLY_AUTH_SALT}
       - AUTH_SIMPLEAUTH_SALT=${DEV_ONLY_AUTH_SIMPLEAUTH_SALT}
