--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "d3": "^7.2.0",
     "fs-extra": "^8.0.1",
+	"@fix-webm-duration/fix":"^1.0.1",
     "js-base64": "^3.7.2",
     "react-datepicker": "^5.0.0",
     "react-overlays": "^5.2.1",
