Reconfigured Docker setup to enable usage of webpack dev server locally, more or less recreated widget installation process and adjacent classes/utilities.

--- a/.gitignore
+++ b/.gitignore
@@ -93,11 +93,8 @@ app/materia/settings.py
 
 
 # django webpack
-app/package.json
+app/media/**/*
+app/media/uploads/*
 app/staticfiles/
 public/css/
 public/js/
-app/babel.config.json
-app/webpack-stats.json
-app/webpack.prod.config.js
-app/yarn.lock
