--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -1,4 +1,5 @@
-name: materia-django
+# name: materia-django
+version: '3.5'
 
 networks:
   backend:
@@ -10,6 +11,7 @@ services:
       - '80:80'
     volumes:
       - ../app:/var/www/html:ro
+      - ../public:/var/www/html/staticfiles:ro
       - ./config/nginx/sites-enabled:/etc/nginx/conf.d:ro
       - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
@@ -20,7 +22,7 @@ services:
   python:
     build:
       context: ../
-      dockerfile: materia-app.node-python.Dockerfile
+      dockerfile: materia-app.python.Dockerfile
     networks:
       - backend
     ports:
@@ -39,16 +41,12 @@ services:
       - EMAIL_PORT=1025
     volumes:
       - ../app:/var/www/html
-      - ../src:/var/www/html/src
-      - ../package.json:/var/www/html/package.json
-      - ../webpack.prod.config.js:/var/www/html/webpack.prod.config.js
-      - ../babel.config.json:/var/www/html/babel.config.json
       - ../wait_for_it.sh:/var/www/html/wait_for_it.sh
-      - ../public:/var/www/html/public
+      - ../public:/var/www/html/staticfiles
       - ./config/uwsgi/:/etc/uwsgi
     # command: uwsgi --ini=/etc/uwsgi/uwsgi.ini --py-autoreload=2
-    # command: /wait_for_it.sh mysql:3306 -t 10 -- uwsgi --ini=/etc/uwsgi/uwsgi.ini --py-autoreload=2
-    command: /bin/bash -c '/wait_for_it.sh mysql:3306 -t 10 && yarn install --silent && echo "Building frontend..." && yarn build-for-image && echo "Collecting static files..." && python manage.py collectstatic --noinput && echo "Starting Django server..." && uwsgi --ini=/etc/uwsgi/uwsgi.ini --py-autoreload=2 && python manage.py runserver 0.0.0.0:8001'
+    command: /wait_for_it.sh mysql:3306 -t 10 -- uwsgi --ini=/etc/uwsgi/uwsgi.ini --py-autoreload=2
+    # command: /bin/bash -c '/wait_for_it.sh mysql:3306 -t 10 && yarn install --silent && echo "Building frontend..." && yarn build-for-image && echo "Collecting static files..." && python manage.py collectstatic --noinput && echo "Starting Django server..." && uwsgi --ini=/etc/uwsgi/uwsgi.ini --py-autoreload=2 && python manage.py runserver 0.0.0.0:8001'
   mysql:
     image: mariadb:10.6
     networks:
