--- a/docker/config/nginx/sites-enabled/site.conf
+++ b/docker/config/nginx/sites-enabled/site.conf
@@ -2,10 +2,15 @@ server {
 	listen *:80;
 	server_name default;
 
-	root /var/www/html;
+	root /var/www/html/staticfiles;
 	index index.html;
 
 	location / {
+		try_files $uri @handler;
+		expires 30d;
+	}
+
+	location @handler {
 		uwsgi_pass python:8001;
 
 		uwsgi_param QUERY_STRING   $query_string;
