--- a/.env
+++ b/.env
@@ -34,18 +34,17 @@ BOOL_SEND_EMAILS=false
 #URLS_STATIC=
 #URLS_ENGINES=
 #BOOL_ADMIN_UPLOADER_ENABLE=true
+ASSET_STORAGE_DRIVER=file
 
 # AWS S3 ===================
 
-ASSET_STORAGE_DRIVER=file
-ASSET_STORAGE_S3_REGION=us-east-1
-ASSET_STORAGE_S3_BASEPATH=media
+# ASSET_STORAGE_S3_REGION=us-east-1
+# ASSET_STORAGE_S3_BASEPATH=media
 # ASSET_STORAGE_S3_BUCKET=<MUST_SET>
 # ASSET_STORAGE_S3_ENDPOINT=<MUST_SET>
 # AWS_ACCESS_KEY_ID=<MUST_SET>
 # AWS_SECRET_ACCESS_KEY=<MUST_SET>
 # AWS_SESSION_TOKEN=<MUST_SET> # STS token for s3 development
-# FAKES3_DISABLED=false # set to true if using real S3 on development
 
 # SESSION & CACHE ===================
 
