Experimental support for imds credentialing for aws s3 sdk

--- a/docker/.env
+++ b/docker/.env
@@ -13,6 +13,8 @@ DEV_ONLY_SECRET_CIPHER_KEY=e0beaea1704555ae3c75650703bb106fac24b8967c77a667124fb
 
 # s3-specific asset storage values
 ASSET_STORAGE_DRIVER=s3 # overrides default value in the base .env (which isn't loaded into dev environment)
+
+ASSET_STORAGE_S3_CREDENTIAL_PROVIDER=env # env | imds
 ASSET_STORAGE_S3_BUCKET=fake_bucket
 ASSET_STORAGE_S3_ENDPOINT=http://fakes3:10001
 ASSET_STORAGE_S3_KEY=KEY
