Refactored generation code and relocated generation logic to new question generator class

--- a/docker/.env
+++ b/docker/.env
@@ -21,3 +21,8 @@ ASSET_STORAGE_S3_KEY=KEY
 ASSET_STORAGE_S3_SECRET=SECRET
 
 # DEV_ONLY_FAKES3_DISABLED=false # set to true if using real S3 on development
+
+# OPENAI_API_KEY=<MUST_SET> # set this value to your api key to enable question generation
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_LOG_STATS=true
+OPENAI_ALLOW_IMAGES=false
