--- a/.env
+++ b/.env
@@ -94,4 +94,9 @@ LTI_KEY="materia-production-lti-key"
 #BOOL_LTI_GRACEFUL_CONFIG_FALLBACK=true
 #BOOL_LTI_LOG_FOR_DEBUGGING=false
 
-OPENAI_API_KEY=<MUST_SET>
+# Question Generation ===
+
+# OPENAI_API_KEY=<MUST_SET>
+# OPENAI_MODEL=gpt-4o-mini
+# OPENAI_LOG_STATS=false
+# OPENAI_ALLOW_IMAGES=false
