Reworks/additions to generation class to allow for openai OR azure openai support

--- a/.env
+++ b/.env
@@ -96,7 +96,11 @@ LTI_KEY="materia-production-lti-key"
 
 # Question Generation ===
 
-# OPENAI_API_KEY=<MUST_SET>
-# OPENAI_MODEL=gpt-4o-mini
-# OPENAI_LOG_STATS=false
-# OPENAI_ALLOW_IMAGES=false
+#GENERATION_ENABLED=true
+#GENERATION_ALLOW_IMAGES=false
+#GENERATION_API_PROVIDER=<MUST_SET>
+#GENERATION_API_ENDPOINT=
+#GENERATION_API_KEY=
+#GENERATION_API_VERSION=
+#GENERATION_API_MODEL=
+#GENERATION_LOG_STATS=true
