Updated docker env with new placeholder generation variables

--- a/docker/.env
+++ b/docker/.env
@@ -22,7 +22,13 @@ ASSET_STORAGE_S3_SECRET=SECRET
 
 # DEV_ONLY_FAKES3_DISABLED=false # set to true if using real S3 on development
 
-# OPENAI_API_KEY=<MUST_SET> # set this value to your api key to enable question generation
-OPENAI_MODEL=gpt-4o-mini
-OPENAI_LOG_STATS=true
-OPENAI_ALLOW_IMAGES=false
+# question generation environment variables. Different variables are required depending on provider.
+GENERATION_ENABLED=false       # required to be true for generation to be enabled
+GENERATION_ALLOW_IMAGES=false  # not required
+
+GENERATION_API_PROVIDER=openai # required. provider must be openai or azure_openai
+GENERATION_API_KEY=            # required for both
+GENERATION_API_ENDPOINT=       # required for azure
+GENERATION_API_VERSION=        # required for azure
+GENERATION_API_MODEL=          # required for openai
+GENERATION_LOG_STATS=true      # not required. stat logging is set to debug threshold
