--- a/docker/.env
+++ b/docker/.env
@@ -23,12 +23,20 @@ ASSET_STORAGE_S3_SECRET=SECRET
 # DEV_ONLY_FAKES3_DISABLED=false # set to true if using real S3 on development
 
 # question generation environment variables. Different variables are required depending on provider.
-GENERATION_ENABLED=false       # required to be true for generation to be enabled
-GENERATION_ALLOW_IMAGES=false  # not required
 
-GENERATION_API_PROVIDER=openai # required. provider must be openai or azure_openai
-GENERATION_API_KEY=            # required for both
-GENERATION_API_ENDPOINT=       # required for azure
-GENERATION_API_VERSION=        # required for azure
-GENERATION_API_MODEL=          # required for openai
-GENERATION_LOG_STATS=true      # not required. stat logging is set to debug threshold
+# required to be true for generation to be enabled
+GENERATION_ENABLED=false
+# explicitly enable or disable image generation. defaults to false if not provided.
+GENERATION_ALLOW_IMAGES=false
+# required. provider must be openai or azure_openai
+GENERATION_API_PROVIDER=openai
+# required for both
+GENERATION_API_KEY= 
+# required for azure
+GENERATION_API_ENDPOINT=
+# required for azure
+GENERATION_API_VERSION=
+# required for openai
+GENERATION_API_MODEL=
+ # not required. stat logging is set to debug threshold
+GENERATION_LOG_STATS=true
