Simplified env imports to docker-compose override

--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -15,22 +15,9 @@ services:
       - ./config/nginx/nginx-dev.conf:/etc/nginx/nginx.conf:ro
 
   app:
-    environment:
-      # values sourced from docker/env
-      - ASSET_STORAGE_DRIVER
-      - ASSET_STORAGE_S3_CREDENTIAL_PROVIDER
-      - ASSET_STORAGE_S3_BUCKET
-      - ASSET_STORAGE_S3_ENDPOINT
-      - ASSET_STORAGE_S3_KEY
-      - ASSET_STORAGE_S3_SECRET
-      - GENERATION_ENABLED
-      - GENERATION_ALLOW_IMAGES
-      - GENERATION_API_PROVIDER
-      - GENERATION_API_ENDPOINT
-      - GENERATION_API_KEY
-      - GENERATION_API_VERSION
-      - GENERATION_API_MODEL
-      - GENERATION_LOG_STATS
+    env_file:
+      - .env
+      - .env.local
     volumes:
       - ..:/var/www/html/
       - uploaded_widgets:/var/www/html/public/widget/
