Adds step to build action to circumvent missing .env.local

--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Create .env.local to satisfy build requirements
+        run: |
+          cd docker
+          if [ ! -f .env.local ]; then
+            touch .env.local
+          fi
+
       - name: Build App Image
         run: |
           cd docker
