--- a/fuel/app/tests/widget_source/test_widget/src/install.yaml
+++ b/fuel/app/tests/widget_source/test_widget/src/install.yaml
@@ -10,6 +10,7 @@ general:
   is_qset_encrypted: No
   is_answer_encrypted: No
   is_generable: No
+  uses_prompt_generation: No
   api_version: 2
 files:
   player: player.html
