updated comments in docker/.env and .env

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
 # Only `BOOL_` options become boolean values, and ONLY `true` evaluates to true
 #
 # Docker/Dev notes:
-# docker/config/materia-docker.env.local is loaded instead of .env.local
+# docker/.env.local is used instead of .env.local
 
 # GENERAL ===================
 
