Added env flag to signify if server is HTTPS or not

--- a/.env
+++ b/.env
@@ -104,3 +104,7 @@ LTI_KEY="materia-production-lti-key"
 #GENERATION_API_VERSION=
 #GENERATION_API_MODEL=
 #GENERATION_LOG_STATS=true
+
+# webserver settings =======
+
+#IS_SERVER_HTTPS=true
