--- a/docker/.env
+++ b/docker/.env
@@ -45,3 +45,8 @@ GENERATION_API_VERSION=
 GENERATION_API_MODEL=
  # not required. stat logging is set to debug threshold
 GENERATION_LOG_STATS=true
+
+# webserver environment variables
+
+# not required, will default to true if unset. signifies if the webserver is using HTTPS or not
+IS_SERVER_HTTPS=true
