--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -36,12 +36,28 @@ jobs:
             touch .env.local
           fi
 
-      - name: Build App Image
+      - name: Build App and Webserver Images
         run: |
           cd docker
           docker compose build --no-cache webserver app
 
-      - name: Push App Images
+      - name: Push Dev App and Webserver Images
+        if: ${{ startsWith(github.ref, 'refs/tags/v') && (contains(github.ref, '-alpha') || contains(github.ref, '-rc')) }}
+        run: |
+          docker tag ucfopen/materia:app-dev ghcr.io/${{ github.repository_owner }}/materia:app-dev
+          docker tag ucfopen/materia:webserver-dev ghcr.io/${{ github.repository_owner }}/materia:webserver-dev
+          docker push ghcr.io/${{ github.repository_owner }}/materia:app-dev
+          docker push ghcr.io/${{ github.repository_owner }}/materia:webserver-dev
+
+      - name: Push Stable App and Webserver Images
+        if: ${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-alpha') && !contains(github.ref, '-rc') }}
+        run: |
+          docker tag ucfopen/materia:app-dev ghcr.io/${{ github.repository_owner }}/materia:app-stable
+          docker tag ucfopen/materia:webserver-dev ghcr.io/${{ github.repository_owner }}/materia:webserver-stable
+          docker push ghcr.io/${{ github.repository_owner }}/materia:app-dev
+          docker push ghcr.io/${{ github.repository_owner }}/materia:webserver-dev
+
+      - name: Push Versioned App and Webserver Images
         run: |
           docker tag ucfopen/materia:app-dev ghcr.io/${{ github.repository_owner }}/materia:app-${{ github.sha }}
           docker tag ucfopen/materia:app-dev ghcr.io/${{ github.repository_owner }}/materia:app-${{ steps.tag_name.outputs.GIT_TAG }}
@@ -70,7 +86,7 @@ jobs:
           overwrite: true
 
       - name: Upload to Pre-Release
-        if: ${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-alpha') && contains(github.ref, '-rc') }}
+        if: ${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-alpha') || contains(github.ref, '-rc') }}
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
