Major rework to setup process. split run_first, reworked dev envs, compose files, and nginx configs

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,6 @@ public/dist/*
 !public/dist/package.json
 !public/dist/path.js
 !public/dist/README.md
+
+# docker override is now untracked as of v10.3.0
+docker/docker-compose.override.yml
