--- a/docker/docker-compose.override.test.yml
+++ b/docker/docker-compose.override.test.yml
@@ -1,4 +1,3 @@
-version: '3.5'
 # use with dockercompose -f docker-compose.yml -f docker-compose.overide.test.yml
 services:
   webserver:
@@ -10,6 +9,9 @@ services:
       - ./config/nginx/nginx-dev.conf:/etc/nginx/nginx.conf:ro
 
   app:
+    env_file:
+      - .env
+      - .env.local
     environment:
       # View Materia README for env settings
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql/test
@@ -30,11 +32,20 @@ services:
       - memcached
 
   mysql:
+    image: mysql:8.0.32
+    platform: linux/amd64
     environment:
+      # values sourced from docker/env
       - MYSQL_ROOT_PASSWORD
       - MYSQL_USER
       - MYSQL_PASSWORD
       - MYSQL_DATABASE
+    ports:
+      - "3306:3306" # allow mysql access from the host - use /etc/hosts to set mysql to your docker-machine ip
+    networks:
+      - backend
+    volumes:
+      - "./config/mysql/01_create_test.sql:/docker-entrypoint-initdb.d/01_create_test.sql"
     # this makes the unit tests much faster but it's a little weird jumping
     # back and forth between running the server and testing
     # tmpfs:
@@ -56,6 +67,11 @@ services:
       - uploaded_media_test:/s3mnt/fakes3_root/fake_bucket/media/
     networks:
       - frontend
+      - backend
+  
+  memcached:
+    image: memcached:1.6.6-alpine
+    networks:
       - backend
 
 volumes:
