--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Build App and Webserver Images
         run: |
           cd docker
-          docker compose build --no-cache webserver app fakes3
+          docker compose build --no-cache webserver app
+          docker compose -f docker-compose.development.yml build --no-cache fakes3
 
       - name: Push Dev App and Webserver Images
         if: ${{ startsWith(github.ref, 'refs/tags/v') && (contains(github.ref, '-alpha') || contains(github.ref, '-rc')) }}
