Restores missing FUEL_ENV value in docker/.env

--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,10 @@
 ## docker/.env contains environment variables used by Materia during local development
 ## we do not recommend making edits directly to this file. Instead, make a .env.local in the same directory (docker/) and override the values below as desired.
 
+# fuel environment
+# the run_first_for_nondev script will automatically override this to production
+FUEL_ENV=development
+
 # general configurations
 SYSTEM_EMAIL=noReply@materia.edu
 
