nondev setup now enables mysql credential config

--- a/docker/.env
+++ b/docker/.env
@@ -16,6 +16,7 @@ MYSQL_ROOT_PASSWORD=drRoots
 MYSQL_USER=materia
 MYSQL_PASSWORD=odin
 MYSQL_DATABASE=materia
+DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql/${MYSQL_DATABASE}
 
 # passwords/hashes/keys
 DEV_ONLY_USER_PASSWORD=kogneato
