Addl (final?) refinements to docker compose, plus env cleanup and commenting

--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,14 @@
-## docker/.env contains environment variables used by Materia during local development
-## we do not recommend making edits directly to this file. Instead, make a .env.local in the same directory (docker/) and override the values below as desired.
+## This env file contains environment variable configurations for development and nondev (but NOT production!)
+## Instead of editing these values directly, use .env.local for overrides
+
+## In a production environment, a final .env file should not include any of the dev defaults for unique keys:
+## AUTH_SALT
+## AUTH_SIMPLEAUTH_SALT
+## CIPHER_KEY
+## LTI_KEY
+## LTI_SECRET
+
+## use the .env file in the root directory as a template for a production .env. Your compose file(s) will need to be updated accordingly.
 
 # fuel environment
 # the run_first_for_nondev script will automatically override this to production
